--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: |
   Connect Everything 새로운 연결, 새로운 세상.
   연결의 혁신으로 세상은 더욱 가깝고 새로워진다고 카카오는 믿습니다.
 baseurl: ''
-url: 'https://hknamu.github.io'
+url: 'https://doctorson0309.github.io'
 timezone: Asia/Seoul 
 
 repository: doctorson0309/hknamu.github.io
