--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: HK나무출판사 블로그
+title: 한상훈 기술 블로그
 email: doctorson0309@naver.com
 description: |
-  Connect Everything 새로운 연결, 새로운 세상.
-  연결의 혁신으로 세상은 더욱 가깝고 새로워진다고 카카오는 믿습니다.
+  명
+  귤화위지. 사람의 성질도 환경에 따라 변할 수 있다고 믿습니다. 당근과 채찍으로 인공지능을 학습시키듯 올바른 노력으로 우리는 변할 수 있습니다.
 baseurl: ''
 url: 'https://doctorson0309.github.io'
 timezone: Asia/Seoul 
