--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: 한상훈 기술 블로그
 email: doctorson0309@naver.com
 description: |
-  귤화위지. 사람의 성질도 환경에 따라 변할 수 있다고 믿습니다. 당근과 채찍으로 인공지능을 학습시키듯 올바른 노력으로 우리는 변할 수 있습니다.
+  귤화위지. 사람의 성질도 환경에 따라 변할 수 있다고 믿습니다. 
+  <br/>당근과 채찍으로 인공지능을 학습시키듯 올바른 노력으로 우리는 변할 수 있습니다.
 baseurl: ''
 url: 'https://doctorson0309.github.io'
 timezone: Asia/Seoul 
