--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 한상훈 기술 블로그
 email: doctorson0309@naver.com
 description: |
   귤화위지. 사람도 환경에 따라 변할 수 있다고 믿습니다. 
-  <br/>우리가 배우고 노력하는 것은 변하기 위함입니다.
+  <br/>우리가 배움을 청하고, 노력하는 것은 변하기 위함입니다.
 baseurl: ''
 url: 'https://doctorson0309.github.io'
 timezone: Asia/Seoul 
